--- a/resources/css/academic.scss
+++ b/resources/css/academic.scss
@@ -1,3 +1,5 @@
+
+
 .menu .nav-item a.active {
     background: var(--bs-primary) !important;
 }
@@ -5,7 +7,7 @@
 .menu .menu-item .border-bottom {
     border-bottom-style: dashed !important;
 }
-.container {
+.container-academic {
     background-color: rgb(220, 229, 231);
 }
 .accordion-body {
