--- a/resources/sass/routes.css
+++ b/resources/sass/routes.css
@@ -3,4 +3,5 @@
 @import '../css/app.scss';
 @import '../css/app.css';
 @import '../css/dashboard.css';
-@import '../css/academic.scss'
+@import '../css/academic.scss';
+@import '../css/document.css';
