--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -17,8 +17,31 @@ body {
     overflow-x: hidden; /* Para ocultar la barra de desplazamiento horizontal */
     margin: 0 auto; /* Para centrar el contenido */
   }
+  .title {
+    font-size: 3rem;
+    font-weight: bold;
+    background: linear-gradient(
+      to right,
+      #115179 20%,
+      #004aad 40%,
+      #38b6ff 60%,
+      #004aad 80%
+    );
+    background-size: 200% auto;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    animation: shine 6s linear infinite;
+  }
+  
+  @keyframes shine {
+    to {
+      background-position: 200% center;
+    }
+  }
+
   .title-container {
-      display: flex;
+      /*display: flex;*/
       justify-content: center;
       align-items: center;
       margin: 10px 130px;
@@ -27,19 +50,10 @@ body {
       margin-right: 20px;
   }
   .logo {
-      width: 80px;
+      width: 250px;
       height: auto;
   }
-  .title {
-      font-size: 2.5rem;
-      font-weight: bold;
-      color: #f3efef;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      text-shadow: 2px 2px 4px rgba(238, 21, 21, 0.3);
-      background-color: rgba(91, 87, 124, 0.521);
-      border-radius: 10px;
-  }
+  
   .btn {
     margin: 30px;
     margin-top: 0px;
@@ -96,31 +110,35 @@ body {
       flex-direction: column;
   }
   .text-video .title-container {
-      font-size: 40px;
+      /*font-size: 40px;*/
       font-weight: 400;
       position: absolute;
-      top: 15px;
+      top: 100px;
   }
   .text-video nav {
       font-size: 25px;
       font-weight: 100;
       position: absolute;
-      top: 180px;
+      /*top: 180px;*/
   }
 /*header*/
 .sub-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0;
+  padding: 20px;
 }
+
 .sub {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #0a0a0a;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-shadow: 2px 2px 4px rgba(238, 21, 21, 0.3);
+  text-align: center;
+}
+
+h2#convocatoria {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+}
+
+h2#convocatoria img {
+  margin-left: 10px; /* Espacio entre el texto y la imagen */
 }
 @media (max-width: 768px) {
 .sub {
@@ -305,14 +323,17 @@ body {
 .container-gallery {
   flex-wrap: wrap; /* Permite que los elementos se ajusten en varias líneas */
   align-items: center;
-  padding: 20px;
-  background-color: #0646f7;
+  padding: 100px;
+  background-color: #082f47;
+}
+.container-gallery{
+  border-bottom: 500px;
 }
 .gallery .gallery-img {
   position: relative;
   overflow: hidden;
-  /*height: 220px;
-  width: 100%;*/
+  height: 220px;
+  width: 100%;
 }
 
 .gallery .gallery-img .hover-style {
