--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -119,14 +119,15 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   line-height: 1.2;
 }
 
-h1, .h1 {
+/*h1, .h1 {
   font-size: calc(1.375rem + 1.5vw);
 }
 @media (min-width: 1200px) {
   h1, .h1 {
+    font-weight: bold;
     font-size: 2.5rem;
   }
-}
+}*/
 
 h2, .h2 {
   font-size: calc(1.325rem + 0.9vw);
@@ -625,13 +626,13 @@ progress {
   color: #6c757d;
 }
 
-.container,
-.container-fluid,
-.container-xxl,
-.container-xl,
-.container-lg,
-.container-md,
-.container-sm {
+.contain,
+.contain-fluid,
+.contain-xxl,
+.contain-xl,
+.contain-lg,
+.contain-md,
+.contain-sm {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   width: 100%;
@@ -642,27 +643,27 @@ progress {
 }
 
 @media (min-width: 576px) {
-  .container-sm, .container {
+  .contain-sm, .contain {
     max-width: 540px;
   }
 }
 @media (min-width: 768px) {
-  .container-md, .container-sm, .container {
+  .contain-md, .contain-sm, .contain {
     max-width: 720px;
   }
 }
 @media (min-width: 992px) {
-  .container-lg, .container-md, .container-sm, .container {
+  .contain-lg, .contain-md, .contain-sm, .contain {
     max-width: 960px;
   }
 }
 @media (min-width: 1200px) {
-  .container-xl, .container-lg, .container-md, .container-sm, .container {
+  .contain-xl, .contain-lg, .contain-md, .contain-sm, .contain {
     max-width: 1140px;
   }
 }
 @media (min-width: 1400px) {
-  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
+  .contain-xxl, .contain-xl, .contain-lg, .contain-md, .contain-sm, .contain {
     max-width: 1320px;
   }
 }
@@ -1925,7 +1926,7 @@ progress {
   border-color: var(--bs-table-border-color);
 }
 
-.table-responsive, .datatable-wrapper .datatable-container {
+.table-responsive, .datatable-wrapper .datatable-contain {
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
 }
@@ -3770,13 +3771,13 @@ textarea.form-control-lg {
   justify-content: space-between;
   padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x);
 }
-.navbar > .container,
-.navbar > .container-fluid,
-.navbar > .container-sm,
-.navbar > .container-md,
-.navbar > .container-lg,
-.navbar > .container-xl,
-.navbar > .container-xxl {
+.navbar > .contain,
+.navbar > .contain-fluid,
+.navbar > .contain-sm,
+.navbar > .contain-md,
+.navbar > .contain-lg,
+.navbar > .contain-xl,
+.navbar > .contain-xxl {
   display: flex;
   flex-wrap: inherit;
   align-items: center;
@@ -5215,7 +5216,7 @@ textarea.form-control-lg {
   display: none;
 }
 
-.toast-container {
+.toast-contain {
   --bs-toast-zindex: 1090;
   position: absolute;
   z-index: var(--bs-toast-zindex);
@@ -5224,7 +5225,7 @@ textarea.form-control-lg {
   max-width: 100%;
   pointer-events: none;
 }
-.toast-container > :not(:last-child) {
+.toast-contain > :not(:last-child) {
   margin-bottom: var(--bs-toast-spacing);
 }
 
@@ -11076,15 +11077,15 @@ body {
   background-color: #e9ecef;
 }
 
-.datatable-wrapper .datatable-container {
+.datatable-wrapper .datatable-contain {
   font-size: 0.875rem;
 }
 
-.datatable-wrapper.no-header .datatable-container {
+.datatable-wrapper.no-header .datatable-contain {
   border-top: none;
 }
 
-.datatable-wrapper.no-footer .datatable-container {
+.datatable-wrapper.no-footer .datatable-contain {
   border-bottom: none;
 }
 
